--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://erichsabo.com/" rel="me">
     <link href="https://mastodon.world/@erichsabo" rel="me">
   </head>
-  <body style="margin: 0; padding: 0">
+  <body style="margin: 0; padding: 0; background-color: #0e1116">
     <a href="https://github.com/erichintime" style="display: block; height: 100vh; width: 100vw; margin: 0; padding: 0; color: #0e1116;">
       github.com/erichintime
     </a>
